--- a/templates/multi/settings.html
+++ b/templates/multi/settings.html
@@ -1,6 +1,5 @@
 <center>
-<p>Hier kannst du grundlegende Einstellungen treffen.</p>
-<p><b>Das Webinterface ist noch nicht fertig! Bitte schau dir den <a href="http://www.loxwiki.eu:80/x/7wBmAQ">Wiki-Artikel</a> an.
+<p><b>Informationen zur Verwendung findest du im <a href="http://www.loxwiki.eu:80/x/7wBmAQ">Wiki-Artikel</a>.
 <form method="post" data-ajax="false" name="cti_form" id="cti_form" action="./index.cgi">
 <style>
 th, td {
@@ -13,21 +12,79 @@ th, td {
 <table style="border-collapse:collapse;" border="0" width="80%">
 <tbody>
 <tr>
-<td>
-<fieldset data-role="controlgroup">
-	   	<legend>Sicherheitsmodus</legend>
-		<input type="radio" name="security-mode" id="security-mode-unsecure" value="UNSECURE" checked="checked" />
-     	<label for="security-mode-unsecure">UNSICHER (Commandline-Befehle)</label>
-<!--     	<input type="radio" name="security-mode" id="security-mode-restricted" value="RESTRICTED"  />
-     	<label for="security-mode-restricted">Eingeschränkt (nur Makros)</label> -->
-     	
-</fieldset>
-</td>
-<td>
-</td>
+	<td>
+	<fieldset data-role="controlgroup">
+	<TMPL_VAR ACTIVATED>
+	</fieldset>
+	</td>
 </tr>
 <tr>
-<td>
+	<td>
+	<table width="100%"><tr><td>
+	<label for="tcpport">TCP-IN</label>
+	<TMPL_VAR TCPPORT>
+	</td>
+	<td>
+	<label for="tcpport">UDP-OUT </label>
+	<TMPL_VAR UDPPORT>
+	</td></tr></table>
+	
+	
+	</td>
+	
+	<td>Der IN-Port ist der TCP-Port, mit dem dein Miniserver mit dem Any-Plugin verbinden kann.
+	<br>Der OUT-Port ist der UDP-Port, an den das Any-Plugin an deinen Miniserver Daten sendet.
+	<br>Wenn du unsicher bist, lass die Standardwerte TCP-IN=9095 und TCP-OUT=9096.
+	</td>
+</tr>
+<tr>
+	<td>
+	<fieldset data-role="controlgroup">
+	<TMPL_VAR SECURITY_MODE>
+	</fieldset>
+	</td>
+	<td>
+	Hier kannst du den Sicherheitsmodus auswählen. Derzeit wird nur UNSECURE unterstützt, d.h. 
+	es können beliebige Befehle mit dem command-Befehl übertragen und ausgeführt werden.<br>
+	Der eingeschränkte Modus für Makros ist noch nicht verfügar.
+	</td>
+</tr>
+<tr>
+	<td>
+	<fieldset data-role="controlgroup">
+	<TMPL_VAR AUTHENTICATION>
+	</fieldset>
+	</td><td>
+	Derzeit ist noch keine Authentifizierung implementiert.
+	</td>
+</tr>
+<tr>
+	<td>
+	<fieldset data-role="controlgroup">
+	<TMPL_VAR RESTRICTED_SUBNET>
+	</fieldset>
+	</td>
+	<td>
+	Bei Einschränkung auf das eigene Subnet dürfen nur Hosts verbinden, die eine Verbindung 
+	aus dem eigenen Netzwerk aufbauen. Diese Option sollte aktiviert bleiben, außer du benötigst
+	explizit Verbindungen aus anderen Subnetzen. 
+	</td>
+</tr>
+<tr>
+	<td>
+	<fieldset data-role="controlgroup">
+	<TMPL_VAR ALLOWED_REMOTE_IPS>
+	</fieldset>
+	</td>
+	<td>
+	Damit kannst du auf bestimmte IP-Adressen einschränken, die zum Any-Plugin verbinden dürfen.<br>
+	Wenn das Feld leer ist, dürfen alle IP-Adressen verbinden.<br>
+	Es sind nur IP-Adressen (keine Hostnamen) erlaubt. Gib die IP-Adressen mit Komma getrennt ein.<br>
+	Wenn du auf IP-Adressen einschränkst, und 127.0.0.1 nicht berücksichtigst, kannst du lokal vom LoxBerry nicht mehr verbinden.  
+	</td>
+</tr>
+<tr>
+<td colspan="2">
 <input type="hidden" name="save" value="save">
 <input type="submit" value="Einstellungen speichern">
 
