Implemented service restart by UI
- Had to sudo killall
- No luck without that killall

--- a/templates/multi/settings.html
+++ b/templates/multi/settings.html
@@ -14,10 +14,12 @@ th, td {
 <tr>
 	<td>
 	<fieldset data-role="controlgroup">
-	<TMPL_VAR ACTIVATED>
+	<TMPL_VAR ACTIVATED><br>
 	</fieldset>
 	</td>
-</tr>
+	<td><TMPL_VAR RUNNINGINSTANCES> Instanzen laufen derzeit (<i>mehr als eine wäre nicht gut</i>)
+	</td>
+	</tr>
 <tr>
 	<td>
 	<table width="100%"><tr><td>
