Added Logfile button

--- a/templates/multi/settings.html
+++ b/templates/multi/settings.html
@@ -16,6 +16,7 @@ th, td {
 	<fieldset data-role="controlgroup">
 	<TMPL_VAR ACTIVATED><br>
 	</fieldset>
+	<a id="btnlogs" data-role="button" href="/admin/system/tools/logfile.cgi?logfile=plugins/<TMPL_VAR LBPLUGINDIR>/tcp2shell.log&header=html&format=template" target="_blank" data-inline="true" data-mini="true" data-icon="arrow-d">Logfile</a>
 	</td>
 	<td><TMPL_VAR RUNNINGINSTANCES> Instanzen laufen derzeit (<i>mehr als eine wäre nicht gut</i>)
 	</td>
